--- a/frontend/src/Pages/Dashboard/Dashboard.css
+++ b/frontend/src/Pages/Dashboard/Dashboard.css
@@ -1,6 +1,15 @@
 .dashboardWrapper {
     background-color: var(--background);
-    padding: 20px;
+    padding: 30px;
     flex-grow: 1;
+    flex-grow: 1;
+    flex-shrink: 0;
     overflow-y: auto;
+    height: 100%;
 }
+
+@media only screen and (max-width: 1000px) {
+    .dashboardWrapper {
+      padding-bottom: 60px;
+    }
+  }
